# anitaAnalysisTools

./: AnitaAveragePowerSpectrum.h  AntarcticaMapPlotter.cxx  AntarcticaMapPlotter.h  ArrayND.h  AveragePowerSpectrum.cxx  AveragePowerSpectrum.h  CMakeLists.txt  CrossCorrelator.cxx  CrossCorrelator.h  Doxyfile  FancyFFTs.cxx  FancyFFTs.h  FancyFFTsWisdomManager.cxx  FancyFFTsWisdomManager.h  FancyTTreeInterpolator.cxx  FancyTTreeInterpolator.h  LinkDef.h  Makefile  OutputConvention.cxx  OutputConvention.h  ProgressBar.cxx  ProgressBar.h  README.md  RootTools.cxx  RootTools.h  distanceFromWaisDivide.cxx  phaseCentre.cxx  testAntarcticaMapPlotterInRoot.C  testAveragePowerSpectrum.cxx  testCorrelator.cxx  testCorrelatorInRoot.C  testDeltaTsSpherical.cxx  testFancyFFTs.cxx  testFancyTTreeInterpolator.cxx  testOutputConvention.cxx  testProgressBar.cxx  waisPulseReconstruction.cxx
anitaMap/: anita3FlightPath.root
config/: A4Wais.conf  AcclaimDebugSettings.conf  AcclaimMagicDisplay.conf  AcclaimSettings.conf  JustOnePeak.conf  loadAnita.C
doc/: Doxyfile  header.html
docs/: Doxyfile  customdoxygen.css
drivers/: CMakeLists.txt  analyzeWais.cxx  applyPreClusteringCuts.cxx  doAPosterioriSeparation.cxx  doClustering.cxx  doCutOptimization.cxx  doDataReduction.cxx  doDataReduction2.cxx  doDataReductionCalPulser.cxx  doDataReductionPayloadBlast.cxx  doNoFilters.cxx  doRayleighFilter.cxx  doSineSub.cxx  doSineSubNoCache.cxx  doSineSubPlusBrickWall.cxx  doSubthresholdClustering.cxx  doWaisClustering.cxx  doWaisNoFilter.cxx  doWaisNoFilterA4.cxx  doWaisNoFilterPhotogrammetry.cxx  editSumTree.cxx  extendClustering.cxx  filterAllNone.cxx  filterAllSineSub.cxx  filterAllSineSubPlusBrickWall.cxx  filterDecimatedAcclaim.cxx  filterDecimatedBrickWallSatellites.cxx  filterDecimatedSineSub.cxx  filterDecimatedSineSubPlusBrickWall.cxx  filterDecimatedUniformMag.cxx  filterWaisAcclaim.cxx  filterWaisAndNonRfSineSub.cxx  filterWaisAndNonRfSineSubPlusBrickWall.cxx  filterWaisBrickWallSatellites.cxx  filterWaisSineSub.cxx  filterWaisUniformMag.cxx  fitPhaseCentersA4.cxx  getMcReconstructionEfficiency.cxx  makeHiCalTree.cxx  makeSubRun.cxx  (+10 more)
include/: AcclaimClustering.h  AcclaimCmdLineArgs.h  AcclaimCorrelationSummary.h  AcclaimFilters.h  AcclaimOpenMP.h  AcclaimParameterManager.h  AcclaimPhaseCenterFakeGeom.h  AcclaimPhaseCenterFitter.h  AcclaimPhaseCenterMinimizer.h  AcclaimPhaseCenterParameters.h  AnalysisCuts.h  AnalysisFlow.h  AnalysisPlot.h  AnalysisReco.h  AnalysisSettings.h  AnitaAveragePowerSpectrum.h  AnitaClusterer.h  AntarcticaMapPlotter.h  AveragePowerSpectrum.h  CrossCorrelator.h  CutOptimizer.h  CutTreeSelector.h  DataQualityMonitor.h  DrawStrings.h  FancyFFTs.h  FancyTTreeInterpolator.h  FourierBuffer.h  InterferometricMap.h  InterferometricMapMaker.h  InterferometryCache.h  OutputConvention.h  ProgressBar.h  QualityCut.h  RayleighHist.h  RayleighInfo.h  RiceInfo.h  RingBufferHist.h  RootTools.h  SumTreeReductionSelector.h  SummaryDraw.h  (+5 more)
plot/: CMakeLists.txt  aPosteriori.C  aPosterioriSeparation.C  doDataReduction.C  drawAnalysisCutResults.C  drawAnalysisPlots.C  drawCalPulserResolution.C  drawCutOptimization.C  drawHorizonVsAltitude.C  drawPathsCloseToAnita.C  findDeconvolveOffset.C  initialDistributions.cxx  interactiveAnalysisOneEvent.C  makeCutTables.C  makeHeatMaps.cxx  minimizeOverlap.C  peakVsTime.cxx  plotClustering.C  plotNarrowestWidths.C  plotRmsPlots.C  plotSubThresholdThermalChain.C  plotSun.C  plotThermalTrees.C  plotWaisEfficiency.C  updateEventTree.C
src/: AcclaimClustering.cxx  AcclaimCmdLineArgs.cxx  AcclaimCorrelationSummary.cxx  AcclaimFilters.cxx  AcclaimOpenMP.cxx  AcclaimParameterManager.cxx  AcclaimPhaseCenterFakeGeom.cxx  AcclaimPhaseCenterFitter.cxx  AcclaimPhaseCenterMinimizer.cxx  AcclaimPhaseCenterParameters.cxx  AnalysisCuts.cxx  AnalysisFlow.cxx  AnalysisPlot.cxx  AnalysisReco.cxx  AnalysisSettings.cxx  AnitaAveragePowerSpectrum.cxx  AnitaClusterer.cxx  AntarcticaMapPlotter.cxx  AveragePowerSpectrum.cxx  CrossCorrelator.cxx  CutOptimizer.cxx  CutTreeSelector.cxx  DataQualityMonitor.cxx  DrawStrings.cxx  FancyFFTs.cxx  FancyTTreeInterpolator.cxx  FourierBuffer.cxx  InterferometricMap.cxx  InterferometricMapMaker.cxx  InterferometryCache.cxx  OutputConvention.cxx  ProgressBar.cxx  QualityCut.cxx  RayleighHist.cxx  RayleighInfo.cxx  RiceInfo.cxx  RingBufferHist.cxx  RootTools.cxx  SumTreeReductionSelector.cxx  SummaryDraw.cxx  (+5 more)
strutt/BensAnita3AnalysisTools/: AnitaAveragePowerSpectrum.cxx  AnitaAveragePowerSpectrum.h  AntarcticaMapPlotter.cxx  AntarcticaMapPlotter.h  AveragePowerSpectrum.cxx  AveragePowerSpectrum.h  CrossCorrelator.cxx  CrossCorrelator.h  FancyFFTs.cxx  FancyFFTs.h  FancyFFTsWisdomManager.cxx  FancyFFTsWisdomManager.h  FancyTTreeInterpolator.cxx  FancyTTreeInterpolator.h  LinkDef.h  Makefile  OutputConvention.cxx  OutputConvention.h  ProgressBar.cxx  ProgressBar.h  README.md  RootTools.cxx  RootTools.h  prioritizerdPerformance.cxx  profile.sh  testAveragePowerSpectrum.cxx  testCorrelator.cxx  testCorrelatorInRoot.C  testDeltaTsSpherical.cxx  testFancyFFTs.cxx  testFancyTTreeInterpolator.cxx
strutt/BensAnita3AnalysisTools/docs/: Doxyfile  header.html
test/: CMakeLists.txt  testAveragePowerSpectrum.cxx  testCmdLineArgs.cxx  testCorrelator.cxx  testCorrelatorInRoot.C  testCutSelector.cxx  testFancyFFTs.cxx  testFancyTTreeInterpolator.cxx  testOutputConvention.cxx  testProgressBar.cxx  testTemplateCorrelator.C
